# x402-rag

./: .env.default  README.md  docker-compose.yml  pyproject.toml
demo/: README.md  pyproject.toml
demo/src/x402_rag_demo/: __init__.py  agent.py  chat.py
langchain/: README.md  pyproject.toml
langchain/src/x402_rag_langchain/: tools.py
sdk/: README.md  pyproject.toml
sdk/examples/: basic_usage.py  error_handling.py
sdk/src/x402_rag_sdk/: __init__.py  auth.py  client.py  config.py  exceptions.py  schemas.py  x402.py
src/x402_rag/core/: __init__.py  context.py  settings.py
src/x402_rag/db/: __init__.py  schemas.py
src/x402_rag/server/: auth.py  dependencies.py  logging.py  run.py  simple_di.py  x402.py
src/x402_rag/server/routers/: docs.py
src/x402_rag/server/x402/: __init__.py  facilitator.py  handler.py  schemas.py
src/x402_rag/services/: __init__.py  base.py  doc_index_service.py  loaders.py  purchase_service.py  retrieval_service.py  schemas.py  utils.py  web_index_service.py
x402-rag-langchain/: README.md  pyproject.toml
x402-rag-langchain/src/x402_rag_langchain/: __init__.py  schemas.py
x402-rag-sdk/: .gitignore  README.md  pyproject.toml
x402-rag-sdk/examples/: error_handling.py  x402_payment_example.py
x402-rag-sdk/src/x402_rag_sdk/: ata.py  client.py  config.py  schemas.py  x402.py
