[project]
name = "x402-rag"
version = "0.1.0"
description = ""
authors = [{ name = "mmdGhanbari", email = "mail.mmdghanbari@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "langchain-core (>=1.0.3,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "pymupdf4llm (>=0.1.8,<0.2.0)",
    "fastapi (>=0.121.0,<0.122.0)",
    "langchain-postgres (>=0.0.16,<0.0.17)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "langchain-google-genai (>=3.0.1,<4.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "x402 (>=0.2.1,<0.3.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "x402_rag", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E, W, F = Standard Flake8 rules (errors, warnings)
# I = Import sorting (replaces isort)
# UP = Pyupgrade rules (helps modernize code)
# B = Bugbear (finds likely bugs)
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
