[project]
name = "x402-rag-langchain"
version = "0.1.0"
description = "LangChain tools for X402 RAG"
authors = [{ name = "mmdGhanbari", email = "mail.mmdghanbari@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry]
packages = [{ include = "x402_rag_langchain", from = "src" }]

[tool.poetry.dependencies]
pydantic = ">=2.0,<3.0"
x402-rag-sdk = { path = "../sdk", develop = true }
langchain-core = "^1.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
