[project]
name = "x402-rag-sdk"
version = "0.1.0"
description = "Python SDK for X402 RAG API"
authors = [{ name = "mmdGhanbari", email = "mail.mmdghanbari@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "solana (>=0.36.9,<0.37.0)",
]

[tool.poetry]
packages = [{ include = "x402_rag_sdk", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
